# reddit-clone

./: .gitignore  README.md  pyproject.toml
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
comments/: forms.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_auto_20210716_1908.py  0002_comment_author.py  0002_comment_post.py  0002_initial.py  0003_alter_comment_post.py  0004_rename_mptt_level_comment_level.py  0005_merge_20210716_1629.py  0006_auto_20210716_1629.py
main_app/: models.py
main_app/migrations/: 0001_initial.py
post_app/: admin.py  apps.py  forms.py  models.py  views.py
post_app/migrations/: 0001_initial.py  0002_auto_20210708_1504.py  0002_auto_20210715_1607.py  0002_auto_20210716_1907.py  0002_initial.py  0002_post_subreddit.py  0003_merge_0002_auto_20210715_1607_0002_initial.py  0003_post_votes.py  0004_auto_20210708_1748.py  0004_auto_20210716_1629.py  0005_rename_img_images_main_img.py  0006_rename_main_img_images_hotel_main_img.py  0007_auto_20210709_0119.py
posts/: models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
redditclone/: settings.py  urls.py
static/: style.css
subreddit/: admin.py  apps.py  models.py  urls.py  views.py
subreddit/migrations/: 0001_initial.py  0002_moderator_user.py
templates/: add_post.html  display_images.html  generic_form.html  header_content.html  images.html  index.html  login.html  main.html  post.html  post_detail.html  posts.html  signup.html
user_app/: admin.py  forms.py  models.py  views.py
(+10 files in other folders)
