[tool.poetry]
name = "reddit-clone"
version = "0.1.0"
description = ""
authors = ["NoelKling <nitekling@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
django-mptt = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
